<resources>
    <string name="app_name">Vocabulario</string>

    <string name="vocabulary_list">Vokabelliste</string>

    <string name="spanish">Spanisch</string>
    <string name="german">Deutsch</string>

    <string name="list_entry_moved_to_bin">In den Papierkorb verschoben.</string>
    <string name="list_entry_undo">Zurück</string>
    <string name="delete_all_list_entries">Alle Einträge löschen</string>
    <string name="delete_all_entries_title">Papierkorb leeren</string>
    <string name="delete_all_entries">Möchtest Du alle Einträge im Papierkorb unwiderruflich löschen?</string>
    <string name="delete_all_entries_positive">Ja</string>
    <string name="delete_all_entries_negative">Nein</string>

    <string name="add_entry">Neue Vokabel</string>
    <string name="edit_entry">Vokabel anpassen</string>
    <string name="submit_button">Speichern</string>

    <string name="information">Information</string>
    <string name="search_action">Liste durchsuchen</string>
    <string name="sort_list_entries">Liste sortieren</string>
    <string name="sort_by">Nach…</string>
    <string name="sort_german">Deutsch</string>
    <string name="sort_spanish">Spanisch</string>
    <string name="sort_difficulty_asc">Schwierigkeit (auf)</string>
    <string name="sort_difficulty_desc">Schwierigkeit (ab)</string>

    <string name="difficulty_hint">Schwierigkeit</string>
    <string name="difficulty_easy">Einfach</string>
    <string name="difficulty_intermediate">Fortgeschritten</string>
    <string name="difficulty_hard">Schwierig</string>
    <string name="emptied_bin">Papierkorb geleert.</string>
    <string name="difficulty_color">Difficulty Color</string>

    <string name="recycle_bin">Papierkorb</string>
    <string name="restored_from_bin">Vokabel wiederhergestellt.</string>
    <string name="bin_is_empty">Der Papierkorb ist leer.</string>
    <string name="list_is_empty">Die Vokabelliste ist leer. \nFüge einen Eintrag hinzu!</string>
    <string name="scroll_to_top">Zum Listenanfang</string>
    <string name="snackbar_anchor">Snackbar Anchor</string>
    <string name="hs_wo_info">Hochschule Worms \nWintersemester 2020/2021 \nAngewandte Informatik</string>
    <string name="project_description">Diese App wurde als Projekt für das Modul \nEntwicklung mobiler Anwendungen entwickelt.</string>
    <string name="developer_info">von Daniel Langer (inf3005)</string>
    <string name="app_description">Eine einfach zu pflegende Vokabelliste \nmit Fokus auf Benutzerfreundlichkeit.</string>
    <string name="tts_info">Vocabulario spricht bei Berührung des \nLautsprechers das spanische Wort aus.</string>
    <string name="tts_requirement">Setzt Installation einer Text-to-Speech-Engine voraus.</string>
    <string name="entry_contents_info">Ein Listeneinträg enthält:</string>
    <string name="entry_contents_bullets">• ein deutsches Wort \n• ein spanisches Wort \n• einen Schwierigkeitsgrad</string>
    <string name="delete_info">Listeneinträge können durch Wischen \nin den Papierkorb verschoben werden.</string>
    <string name="restore_info">Einträge im Papierkorb können durch \nAntippen wiederhergestellt werden.</string>

</resources>