<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/scroll_to_top"
        android:icon="@drawable/ic_arrow_up"
        android:title="@string/scroll_to_top"
        app:showAsAction="always" />

    <item
        android:id="@+id/option_search"
        android:icon="@drawable/ic_search"
        android:title="@string/search_action"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always|collapseActionView" />

    <item
        android:id="@+id/sort_item"
        android:enabled="true"
        android:icon="@drawable/ic_sort_list"
        android:title="@string/sort_list_entries"
        android:visible="true"
        app:showAsAction="ifRoom">

        <menu>
            <item
                android:checkable="false"
                android:enabled="false"
                android:title="@string/sort_by" />

            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/sort_de"
                    android:title="@string/german" />
                <item
                    android:id="@+id/sort_sp"
                    android:title="@string/spanish" />
                <item
                    android:id="@+id/sort_difficulty_asc"
                    android:title="@string/sort_difficulty_asc" />
                <item
                    android:id="@+id/sort_difficulty_desc"
                    android:title="@string/sort_difficulty_desc" />
            </group>
        </menu>
    </item>

</menu>